Alligned modal text to the left

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Dash.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
+                <p class="mb-5 text-left">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
               </div>
             </div>
           </div>
@@ -482,7 +482,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Glance.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Dimension Data Glance is one of the winning products from Hackfest 2019.1 and is an application which will simplify the process of logging calls to Dimension Data’s ITSM system making it easier for end-users to report malfunctioning equipment. It uses QR scanning technology to pull information on the room in which there is a problem and then through simple swiping gestures the user can log the issue for specific items in that room. The app will also function as an enablement tool to help A/V engineers perform their daily checks faster and log the calls at the same time.</p>
+                <p class="mb-5 text-left">Dimension Data Glance is one of the winning products from Hackfest 2019.1 and is an application which will simplify the process of logging calls to Dimension Data’s ITSM system making it easier for end-users to report malfunctioning equipment. It uses QR scanning technology to pull information on the room in which there is a problem and then through simple swiping gestures the user can log the issue for specific items in that room. The app will also function as an enablement tool to help A/V engineers perform their daily checks faster and log the calls at the same time.</p>
               </div>
             </div>
           </div>
@@ -520,7 +520,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/School.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I attended De La Salle Holy Cross College high school in Victory Park from 2009 until 2013 and then wrote matric in 2013. Subjects I took included: Mathematics, English, Afrikaans first additional language, Life Orientation, Life Sciences, Physical Sciences, Accounting, Mathematics Paper 3, and Advanced Program Mathematics. I achieved seven A’s and two B’s for Matric.</p>
+                <p class="mb-5 text-left">I attended De La Salle Holy Cross College high school in Victory Park from 2009 until 2013 and then wrote matric in 2013. Subjects I took included: Mathematics, English, Afrikaans first additional language, Life Orientation, Life Sciences, Physical Sciences, Accounting, Mathematics Paper 3, and Advanced Program Mathematics. I achieved seven A’s and two B’s for Matric.</p>
                 <a href="documents/DevinAzzie_MatricCertificate.pdf">
                   <button class="btn btn-primary">
                   Matric Certificate
@@ -561,7 +561,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/University.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
+                <p class="mb-5 text-left">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
                 <a href="documents/DevinAzzie_Degree.pdf">
                   <button class="btn btn-primary">
                   Degree
@@ -606,7 +606,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Cisco.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I have completed the Cisco Firejumper Academy Network Security Cybersecurity Systems Engineer Stage 1 and Stage 2 certifications. Stage 1 comprises of an essentials course and Stage 2 has four sections: Advanced Threat Cybersecurity, Cloud Web and Email Cybersecurity, Enforcement and Visibility, and Network Security.</p>
+                <p class="mb-5 text-left">I have completed the Cisco Firejumper Academy Network Security Cybersecurity Systems Engineer Stage 1 and Stage 2 certifications. Stage 1 comprises of an essentials course and Stage 2 has four sections: Advanced Threat Cybersecurity, Cloud Web and Email Cybersecurity, Enforcement and Visibility, and Network Security.</p>
                 <a href="documents/DevinAzzie_CiscoStage1.pdf">
                   <button class="btn btn-primary">
                   Stage 1
@@ -651,7 +651,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Fortinet.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I have been certified as a Fortinet NSE Associate by completing Fortinet NSE1, NSE2, and NSE3 certifications. NSE3 requires you to certify across at least 4 Fortinet products however I have completed all 22 products. My Fortinet NSE Associate certification is valid for two years from the date of NSE3 certification.</p>
+                <p class="mb-5 text-left">I have been certified as a Fortinet NSE Associate by completing Fortinet NSE1, NSE2, and NSE3 certifications. NSE3 requires you to certify across at least 4 Fortinet products however I have completed all 22 products. My Fortinet NSE Associate certification is valid for two years from the date of NSE3 certification.</p>
                 <a href="documents/DevinAzzie_FortinetNSE1.pdf">
                   <button class="btn btn-primary">
                   NSE1
@@ -701,7 +701,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/AWS.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I have completed the AWS Cloud Practitioner and Security Fundamentals courses.</p>
+                <p class="mb-5 text-left">I have completed the AWS Cloud Practitioner and Security Fundamentals courses.</p>
                 <a href="documents/DevinAzzie_AWSCloudPractioner.pdf">
                   <button class="btn btn-primary">
                   Cloud Practioner
