--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
         </div>
       </div>
 
+      <button>
+        <a href="blackjack.html">Blackjack</a>
+      </button>
+
     </div>
   </section>
 
