Added info to about section

--- a/index.html
+++ b/index.html
@@ -174,16 +174,14 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto text-left">
-          <p class="lead">I am a mechanical engineering graduate who has been part of the NTT secure coding learnership program since 1 June 2019.</p>
+          <p class="lead"> </p>
         </div>
         <div class="col-lg-4 mr-auto text-left">
-          <p class="lead">I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have vast skills in the areas that I am interested in.</p>
+          <p class="lead">I am a mechanical engineering graduate who has been part of the NTT secure coding learnership program since 1 June 2019.<br> <br> I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have vast skills in the areas that I am interested in.</p>
         </div>
       </div>
 
-      <button>
-        <a href="blackjack.html">Blackjack</a>
-      </button>
+
 
     </div>
   </section>
