formatted About section, added info

--- a/index.html
+++ b/index.html
@@ -40,6 +40,32 @@
         background-size: cover;
     }
 
+    ul.aboutlist{
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      font-size: 1.25rem;
+      font-weight: 300
+    }
+
+    .pro-title {
+      font-weight: 700;
+      color: #ffffff;
+      position: relative;
+      width: 120px;
+      display: inline-block;
+      margin-bottom: 7px;
+    }
+
+    .pro-detail {
+      font-weight: 500;
+      color: #ffffff;
+      position: relative;
+      width: 120px;
+      display: inline-block;
+      margin-bottom: 7px;
+    }
+
 </style>
 
 <!-- Custom fonts for this theme -->
@@ -173,11 +199,26 @@
 
       <!-- About Section Content -->
       <div class="row">
-        <div class="col-lg-4 ml-auto text-left">
-          <p class="lead"> </p>
+        <div class="col-lg-5 ml-auto text-left">
+            <ul class="aboutlist lead">
+              <li><span class="pro-title">Name: </span> <span class="pro-detail">Devin  Azzie</span></li>
+              <li><span class="pro-title">Age: </span> <span class="pro-detail">24 </li>
+              <li><span class="pro-title">City: </span> <span class="pro-detail">Johannesburg</li>
+              <li><span class="pro-title">Country: </span> <span class="pro-detail">South Africa</li>
+              
+              <br>
+              <li><span class="pro-title">Email: </span> <span class="pro-detail">devinazzie@gmail.com </span></li>
+              <li><span class="pro-title">Phone: </span> <span class="pro-detail">0736082054</span></li>
+              <br>
+            </ul>
         </div>
-        <div class="col-lg-4 mr-auto text-left">
-          <p class="lead">I am a mechanical engineering graduate who has been part of the NTT secure coding learnership program since 1 June 2019.<br> <br> I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have vast skills in the areas that I am interested in.</p>
+        <div class="col-lg-5 mr-auto text-left">
+          <p class="lead">
+            I am a mechanical engineering graduate who has been part of the NTT secure coding learnership program since 1 June 2019.
+            <br>
+            <br>
+            I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have developed skills in the areas that I am interested in. I thrive in a team environment and am always keen to learn as much as I am able to.
+          </p>
         </div>
       </div>
 
