--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Dash.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5 text-left">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
+                <p class="mb-5 text-left">Dimension Data Dash is an enablement tool created by the NTT Secure Codimg Academy graduates which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple but effective user interface. The first iteration of the project is distributed in PDF format however it is panned to create a webapp version of the tool in the future. </p>
                 <a href="documents/Dimension_Data_Dash_CSIT.pdf">
                   <button class="btn btn-primary">
                   Dimension Data Dash v1.0
