--- a/index.html
+++ b/index.html
@@ -175,7 +175,19 @@
             </div>
             <img class="img-fluid" src="img/portfolio/Glance.png" alt="">
           </div>
-        </div>   
+        </div>
+        
+        <!-- Portfolio Item 3 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/Glance.png" alt="">
+          </div>
+        </div>  
 
       </div>
     </div>
@@ -478,6 +490,7 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
+                <h5 class="mb-5">Status: PI 1 Complete</h5>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/DashScreenshot.PNG" alt="">
                 <!-- Portfolio Modal - Text -->
@@ -513,8 +526,45 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
+                <h5 class="mb-5">Status: In Progress</h5>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Glance.png" alt="">
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text-left">Dimension Data Glance is one of the winning products from Hackfest 2019.1 and is an application which will simplify the process of logging calls to Dimension Data’s ITSM system making it easier for end-users to report malfunctioning equipment. It uses QR scanning technology to pull information on the room in which there is a problem and then through simple swiping gestures the user can log the issue for specific items in that room. The app will also function as an enablement tool to help A/V engineers perform their daily checks faster and log the calls at the same time.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 3 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Dimension Data Glance</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <h5 class="mb-5">Status: In Progress</h5>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Britehouse.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5 text-left">Dimension Data Glance is one of the winning products from Hackfest 2019.1 and is an application which will simplify the process of logging calls to Dimension Data’s ITSM system making it easier for end-users to report malfunctioning equipment. It uses QR scanning technology to pull information on the room in which there is a problem and then through simple swiping gestures the user can log the issue for specific items in that room. The app will also function as an enablement tool to help A/V engineers perform their daily checks faster and log the calls at the same time.</p>
               </div>
