--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/Glance.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Britehouse.png" alt="">
           </div>
         </div>  
 
