updated Info for S4Hana project modal

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Dimension Data Glance</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Britehouse Analytics Dashboard Project</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -566,7 +566,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Britehouse.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5 text-left">Dimension Data Glance is one of the winning products from Hackfest 2019.1 and is an application which will simplify the process of logging calls to Dimension Data’s ITSM system making it easier for end-users to report malfunctioning equipment. It uses QR scanning technology to pull information on the room in which there is a problem and then through simple swiping gestures the user can log the issue for specific items in that room. The app will also function as an enablement tool to help A/V engineers perform their daily checks faster and log the calls at the same time.</p>
+                <p class="mb-5 text-left">The NTT Secure Coding Academy graduates have partnered with the 2020 Britehouse graduates to build an analytics tool which will produce live dashboards providing insights into how time is booked using the company's SAP 4 Hana system.</p>
               </div>
             </div>
           </div>
