--- a/index.html
+++ b/index.html
@@ -313,7 +313,43 @@
               <i class="fas fa-plus fa-3x"></i>
             </div>
           </div>
+          <img class="img-fluid" src="img/portfolio/PaloAltoNetworks.png" alt="">
+        </div>
+      </div>
+
+      <!-- Education Item 6 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal6">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/McAfee.png" alt="">
+        </div>
+      </div>
+
+      <!-- Education Item 7 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal7">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
           <img class="img-fluid" src="img/portfolio/AWS.png" alt="">
+        </div>
+      </div>
+
+      <!-- Education Item 8 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal8">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/Azure.png" alt="">
         </div>
       </div>
 
@@ -678,7 +714,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Education Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Cisco Firejumper Academy</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Cisco</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -723,7 +759,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Education Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Fortinet NSE Associate </h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Fortinet</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -759,8 +795,90 @@
     </div>
   </div>
 
+  
+
   <!-- Education Modal 5 -->
   <div class="portfolio-modal modal fade" id="educationModal5" tabindex="-1" role="dialog" aria-labelledby="eduationModal5Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Palo Alto Networks</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/PaloAltoNetworks.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5 text-left"> I have completed the Palo Alto Networks Accredited Sales Executive (ASE) online course on the Palo Alto Networks partner learning centre.</p>
+                <a href="documents/DevinAzzie_PaloAltoASE.pdf">
+                  <button class="btn btn-primary">
+                  Palo Alto Networks ASE
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Education Modal 6 -->
+  <div class="portfolio-modal modal fade" id="educationModal6" tabindex="-1" role="dialog" aria-labelledby="eduationModal6Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">McAfee</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/McAfee.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5 text-left">I have completed the McAfee MVision Cloud sales enablement course on the McAfee partner learning centre</p>
+                <a href="documents/DevinAzzie_McAfeeMVisionCloud.pdf">
+                  <button class="btn btn-primary">
+                  MVison Cloud
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Education Modal 7 -->
+  <div class="portfolio-modal modal fade" id="educationModal7" tabindex="-1" role="dialog" aria-labelledby="eduationModal7Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -785,7 +903,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/AWS.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5 text-left">I have completed the AWS Cloud Practitioner and Security Fundamentals courses.</p>
+                <p class="mb-5 text-left">I have completed the AWS Cloud Practitioner and Security Fundamentals courses on the AWS online training platform.</p>
                 <a href="documents/DevinAzzie_AWSCloudPractioner.pdf">
                   <button class="btn btn-primary">
                   Cloud Practioner
@@ -794,6 +912,51 @@
                 <a href="documents/DevinAzzie_AWSSecurityFundamentals.pdf">
                   <button class="btn btn-primary">
                   Security Fundamentals
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Education Modal 8 -->
+  <div class="portfolio-modal modal fade" id="educationModal8" tabindex="-1" role="dialog" aria-labelledby="eduationModal8Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Microsoft Azure Online Training</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Azure.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5 text-left">I have completed several courses on Microsoft Azure's free eLearning platform. Most of the courses completed are focused around security in the Azure cloud.</p>
+                <a href="documents/DevinAzzie_AzureBadges1.PNG">
+                  <button class="btn btn-primary">
+                  Badge Set 1
+                  </button>
+                </a>
+                <a href="documents/DevinAzzie_AzureBadges2.PNG">
+                  <button class="btn btn-primary">
+                  Badge Set 2
                   </button>
                 </a>
               </div>
