Updated skills accordian styling and picture

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .page-section2{
       text-align:center;
         color: white;
-        background-image: url('img/NightSky.jpg');
+        background-image: url('img/BlueSpace.jpg');
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-position: center center;
@@ -33,7 +33,7 @@
     .page-section3{
       text-align:center;
         color: white;
-        background-image: url('img/Water.jpg');
+        background-image: url('img/NightSky.jpg');
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-position: center center;
@@ -385,7 +385,7 @@
     <div class="card-header z-depth-1 teal lighten-4" role="tab" id="heading10">
       <a data-toggle="collapse" data-parent="#accordionEx2" href="#collapse10" aria-expanded="false"
         aria-controls="collapse10">
-        <h4 class="mb-0 black-text text-center font-weight-bold text-uppercase">
+        <h4 class="mb-0 text-light text-center font-weight-bold text-uppercase">
           Technical Skills
         </h4>
       </a>
@@ -394,7 +394,7 @@
     <!-- Card body -->
     <div id="collapse10" class="collapse" role="tabpanel" aria-labelledby="heading10"
       data-parent="#accordionEx2">
-      <div class="card-body rgba-teal-strong teal text-primary text-left">
+      <div class="card-body rgba-teal-strong teal text-light text-left">
         <p>Over several years I have developed my technical skills relating to both engineering as well as technology and computers. Some of my skills include:</p>
         <p>Some of my skills include:</p>
         <ul>
@@ -422,7 +422,7 @@
     <div class="card-header z-depth-1 teal lighten-3" role="tab" id="heading11">
       <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapse11"
         aria-expanded="false" aria-controls="collapse11">
-        <h4 class="mb-0 black-text text-center font-weight-bold text-uppercase">
+        <h4 class="mb-0 text-light text-center font-weight-bold text-uppercase">
           Non-technical Skills
         </h4>
       </a>
@@ -431,7 +431,7 @@
     <!-- Card body -->
     <div id="collapse11" class="collapse" role="tabpanel" aria-labelledby="heading11"
       data-parent="#accordionEx2">
-      <div class="card-body rgba-teal-strong text-primary text-left">
+      <div class="card-body rgba-teal-strong text-light text-left">
         <p>My non-technical skills have developed at a rapid rate since finishing university. I have worked on several projects that have helped develope my team-based skills as well as my soft-skills.</p>
         <p>Some of these non-technical skills include:</p>
         <ul>
