--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .page-section2{
       text-align:center;
         color: white;
-        background-image: url('img/BlueSpace.jpg');
+        background-image: url('img/NightSky.jpg');
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-position: center center;
@@ -33,7 +33,7 @@
     .page-section3{
       text-align:center;
         color: white;
-        background-image: url('img/NightSky.jpg');
+        background-image: url('img/BlueSpace2.jpg');
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-position: center center;
