final update to skills background image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .page-section3{
       text-align:center;
         color: white;
-        background-image: url('img/BlueDeck2.jpg');
+        background-image: url('img/BlueSpace2.jpg');
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-position: center center;
