fixed spelling error in skills section

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <div id="collapse11" class="collapse" role="tabpanel" aria-labelledby="heading11"
       data-parent="#accordionEx2">
       <div class="card-body rgba-teal-strong text-light text-left">
-        <p>My non-technical skills have developed at a rapid rate since finishing university. I have worked on several projects that have helped develope my team-based skills as well as my soft-skills.</p>
+        <p>My non-technical skills have developed at a rapid rate since finishing university. I have worked on several projects that have helped developed my team-based skills as well as my soft-skills.</p>
         <p>Some of these non-technical skills include:</p>
         <ul>
           <li>Quick thinker</li>
