--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">Imola Building, The Campus Office Park Cnr Sloane Street & Main Road
+          <p class="lead mb-0">Wembley Building, The Campus Office Park Cnr Sloane Street & Main Road
             <br>Bryanston, Johannesburg 2021</p>
         </div>
 
