Added Doctrina to projects section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,22 @@
       </div>
     </div>
   </section>
+        
+        <!-- Portfolio Item 4 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/Britehouse.png" alt="">
+          </div>
+        </div>  
+
+      </div>
+    </div>
+  </section>
 
   <!-- About Section -->
   <section class="page-section2 bg-primary text-white" id="about">
@@ -577,6 +593,42 @@
 
   <!-- Portfolio Modal 3 -->
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Doctrina</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <h5 class="mb-5">Status: PI 1 Complete</h5>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Britehouse.png" alt="">
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text-left">Doctrina is a website designed to display all the current Graduates of Britehouse on s ingle platform and highlights their line of business interests as well as their skillsets. The graduates can be filtered according to their skills making it easier for recruiters within Dimension Data to find a graduate to fill a specific role within a particular team or business unit. Each Grad also has links on their Doctrina section that point to their Github Pages Digital Profile page as well as their github account and their LinkedIn profile.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 4 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
