Added Doctrina Link button to doctrina modal

--- a/index.html
+++ b/index.html
@@ -614,7 +614,12 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Britehouse.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5 text-left">Doctrina is a website designed to display all the current Graduates of Britehouse on s ingle platform and highlights their line of business interests as well as their skillsets. The graduates can be filtered according to their skills making it easier for recruiters within Dimension Data to find a graduate to fill a specific role within a particular team or business unit. Each Grad also has links on their Doctrina section that point to their Github Pages Digital Profile page as well as their github account and their LinkedIn profile.</p>
+                <p class="mb-5 text-left">Doctrina is a website designed to display all the current Graduates of Britehouse on single platform and highlights their line of business interests as well as their skillsets. The graduates can be filtered according to their skills making it easier for recruiters within Dimension Data to find a graduate to fill a specific role within a particular team or business unit. Each graduate also has links on their Doctrina section that point to their Github Pages Digital Profile page as well as their github account and their LinkedIn profile.</p>
+                <a href="https://gradgital.github.io/Doctrina2020/">
+                  <button class="btn btn-primary">
+                  Doctrina
+                  </button>
+                </a>
               </div>
             </div>
           </div>
