--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <!-- Footer CV Download Link -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Full CV Download</h4>
-          <a href="documents/Devin Azzie CV.pdf" download="Devin_Azzie_CV">
+          <a href="documents/Devin Azzie CV 2020.pdf" download="Devin_Azzie_CV">
             <button class="btn btn-secondary btn-outline-light">
             Download
             </button>
