removed duplication in skills section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     </div>
   </nav>
   
+
   <!-- Masthead -->
   <header class="masthead bg-primary text-light text-center">
  
@@ -407,7 +408,7 @@
     <div id="collapse10" class="collapse" role="tabpanel" aria-labelledby="heading10"
       data-parent="#accordionEx2">
       <div class="card-body rgba-teal-strong teal text-light text-left">
-        <p>Over several years I have developed my technical skills relating to both engineering as well as technology and computers. Some of my skills include:</p>
+        <p>Over several years I have developed my technical skills relating to both engineering as well as technology and computers.</p>
         <p>Some of my skills include:</p>
         <ul>
           <li>Python</li>
