Added django and azure to technical skills

--- a/index.html
+++ b/index.html
@@ -412,8 +412,10 @@
         <p>Some of my skills include:</p>
         <ul>
           <li>Python</li>
+          <li>Django</li>
           <li>Basic Javascript</li>
           <li>HTML, CSS, and Bootstrap 4</li>
+          <li>Microsoft Azure Fundamentals</li>
           <li>MATLAB</li>
           <li>Simulink</li>
           <li>Have entry-level certifications in Cisco, Fortinet, McAfee, and Palo Alto Networks cybersecurity products</li>
