--- a/index.html
+++ b/index.html
@@ -497,10 +497,17 @@
 
         <!-- Footer CV Download Link -->
         <div class="col-lg-4 mb-5 mb-lg-0">
-          <h4 class="text-uppercase mb-4">Full CV Download</h4>
+          <h4 class="text-uppercase mb-4">CV Download</h4>
+
           <a href="documents/Devin Azzie CV 2020.pdf" download="Devin_Azzie_CV">
             <button class="btn btn-secondary btn-outline-light">
-            Download
+            Full CV
+            </button>
+          </a>
+
+          <a href="documents/Devin Azzie CV Abridged.pdf" download="Devin_Azzie_CV">
+            <button class="btn btn-secondary btn-outline-light">
+            Abridged CV
             </button>
           </a>
           
