Changed Abridged CV download name

--- a/index.html
+++ b/index.html
@@ -505,13 +505,13 @@
             </button>
           </a>
 
-          <a href="documents/Devin Azzie CV 2020.pdf" download="Devin_Azzie_CV">
+          <a href="documents/Devin Azzie CV 2020.pdf" download="Devin_Azzie_CV_Full">
             <button class="btn btn-secondary btn-outline-light">
             Full CV
             </button>
           </a>
 
-          
+
       </div>
     </div>
   </footer>
