Removed old CV link

--- a/index.html
+++ b/index.html
@@ -539,16 +539,9 @@
 
           <a href="documents/Devin Azzie CV Abridged.pdf" download="Devin_Azzie_CV">
             <button class="btn btn-secondary btn-outline-light">
-            Abridged CV
+            Click to Download
             </button>
           </a>
-
-          <a href="documents/Devin Azzie CV 2020.pdf" download="Devin_Azzie_CV_Full">
-            <button class="btn btn-secondary btn-outline-light">
-            Full CV
-            </button>
-          </a>
-
 
       </div>
     </div>
