Updated Job Title and updated CV

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">NTT Secure Coding Intern</p>
+      <p class="masthead-subheading font-weight-light mb-0">Data Engineer</p>
 
     </div>
     
@@ -243,7 +243,7 @@
         </div>
         <div class="col-lg-5 mr-auto text-left">
           <p class="lead">
-            I am a mechanical engineering graduate who has been part of the NTT secure coding learnership program since 1 June 2019.
+            I am a mechanical engineering graduate who then joined NTT/Dimension Data as part of the NTT secure coding learnership program from June 2019 to July 2020. I now work within the Intelligent Workplace part of the business as a Data Engineer.
             <br>
             <br>
             I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have developed skills in the areas that I am interested in. I thrive in a team environment and am always keen to learn as much as I am able to.
@@ -407,6 +407,7 @@
           <li>Basic Javascript</li>
           <li>HTML, CSS, and Bootstrap 4</li>
           <li>Microsoft Azure Fundamentals</li>
+          <li>Microsoft Azure Data Factory</li>
           <li>MATLAB</li>
           <li>Simulink</li>
           <li>Have entry-level certifications in Cisco, Fortinet, McAfee, and Palo Alto Networks cybersecurity products</li>
@@ -615,7 +616,7 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <h5 class="mb-5">Status: In Progress</h5>
+                <h5 class="mb-5">Status: POC In Progress</h5>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Glance.png" alt="">
                 <!-- Portfolio Modal - Text -->
@@ -692,7 +693,7 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <h5 class="mb-5">Status: In Progress</h5>
+                <h5 class="mb-5">Status: PI2 In Progress</h5>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Britehouse.png" alt="">
                 <!-- Portfolio Modal - Text -->
