--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">CV Download</h4>
 
-          <a href="documents/Devin Azzie CV.pdf.pdf" download="Devin_Azzie_CV">
+          <a href="documents/Devin Azzie CV.pdf" download="Devin_Azzie_CV">
             <button class="btn btn-secondary btn-outline-light">
             Click to Download
             </button>
