Fixed spelling mistake in Certification modals

--- a/index.html
+++ b/index.html
@@ -221,7 +221,6 @@
     </div>
   </section>
 
-
   <!-- About Section -->
   <section class="page-section2 bg-primary text-white" id="about">
     <div class="container">
@@ -264,7 +263,6 @@
 
     </div>
   </section>
-
 
   <!-- Certification Section -->
   <section class="page-section portfolio" id="certification">
@@ -386,9 +384,8 @@
         
   </section>
 
-
-<!-- Skills Section -->
-<section class="page-section3 bg-primary text-white mb-0" id="skills">
+  <!-- Skills Section -->
+  <section class="page-section3 bg-primary text-white mb-0" id="skills">
   <div class="container">
 
     <!-- Skills Section Heading -->
@@ -499,10 +496,10 @@
 </div>
 <!--/.Accordion wrapper-->
 
-</section>
+  </section>
 
-<!-- Education Section -->
-<section class="page-section portfolio" id="education">
+  <!-- Education Section -->
+  <section class="page-section portfolio" id="education">
   <div class="container">
 
     <!-- Education Section Heading -->
@@ -546,7 +543,7 @@
 
     </div>
   </div>
-</section>
+  </section>
 
   <!-- Footer -->
   <footer class="footer text-center">
@@ -810,8 +807,8 @@
                 
                 <!-- Portfolio Modal - Text -->
                 </br>    
-                <p class="mb-5 text-left">I have taken the Microsoft Azure Fundamentals AI-900 exam and obtained the. I attended instructor-led online training carried out by Microsoft as part of their Partner Training week and then took the exam on 13 January 2022. The exam was an online proctored exam which was supervised by Pearson VUE, Microsoft's partner for online proctored exams.</br></br>
-                                          Click the Acclaim badge to learn more about this certification. </p>
+                <p class="mb-5 text-left">I have taken the Microsoft Azure Fundamentals AI-900 exam and passed the certification. I attended instructor-led online training carried out by Microsoft as part of their Partner Training week and then took the exam on 13 January 2022. The exam was an online proctored exam which was supervised by Pearson VUE, Microsoft's partner for online proctored exams.</br></br>
+                                          Click the badge to learn more about this certification. </p>
                 <!-- Portfolio Modal - Image -->
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="073ab959-0488-4657-ab2a-4d909294c72e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
               </div>
@@ -847,8 +844,8 @@
                 </div>
                 <!-- Portfolio Modal - Text -->
                 </br>    
-                <p class="mb-5 text-left">I have taken the Microsoft Azure Fundamentals AZ-900 exam and obtained the. I attended instructor-led training carried out by LGIT Solutions and then took the exam on 25 June 2020. The exam was an online proctored exam which was supervised by Pearson VUE, Microsoft's partner for online proctored exams.</br></br>
-                                          Click the Acclaim badge to learn more about this certification. </p>
+                <p class="mb-5 text-left">I have taken the Microsoft Azure Fundamentals AZ-900 exam and passed the certification. I attended instructor-led training carried out by LGIT Solutions and then took the exam on 25 June 2020. The exam was an online proctored exam which was supervised by Pearson VUE, Microsoft's partner for online proctored exams.</br></br>
+                                          Click the badge to learn more about this certification. </p>
                 <!-- Portfolio Modal - Image -->
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bcdff362-bfd0-4b54-bda1-a15f3f4770a1" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
               </div>
